--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <title>Doge site</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="cssimages/dogeicon.png">
+    <link rel="icon" href="dogeicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Quicksand&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="top_container">
-    <img class="cloud1" src="cssimages/cloud.png" alt="cloud-img">
+    <img class="cloud1" src="cloud.png" alt="cloud-img">
     <h1>Dziobzi.</h1>
     <h2>świeżo pieczony programista.</h2>
-    <img class="cloud2" src="cssimages/cloud.png" alt="cloud-img">
-    <img class="dogebread" src="cssimages/doge_bread.png" alt="dogebread-img">
+    <img class="cloud2" src="cloud.png" alt="cloud-img">
+    <img class="dogebread" src="doge_bread.png" alt="dogebread-img">
 </div>
 <div class="middle-container">
   <div class="profile">
-    <img  class="me" src="cssimages/doge-modified.png" alt="me">
+    <img  class="me" src="doge-modified.png" alt="me">
     <h2>Witam serdecznie.</h2>
     <p>Trafiłeś na moją dosyć dziwną i niecharakterystyczną stronę.</p>
   </div>
@@ -32,7 +32,7 @@
             <p>Jak widać dopiero się uczę, ale będzie lepiej.</p>
         </div>
         <div class="doge-programmer">
-            <img class="doge-programmer" src="cssimages/doge-programmer.jpeg" alt="">
+            <img class="doge-programmer" src="doge-programmer.jpeg" alt="">
         </div>
 
 
@@ -41,7 +41,7 @@
   </div>
   <hr>
     <div>
-        <img class="dogesmug" src="cssimages/doge_smug.png" alt="hehe">
+        <img class="dogesmug" src="doge_smug.png" alt="hehe">
     </div>
   <div class="contact-me">
     <h2>Zrobić Ci stronkę?</h2>
